cookie and signup where settupeed

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 Mongodb="mongodb+srv://shibinshabu392:shibinmongodb@mern.1f9rwmv.mongodb.net/MERN?retryWrites=true&w=majority&appName=MERN"
+JWT_SECRET='kjdvgudy9sd87vsduvdv89sd7vyodh8'
